# industrial-robot-simulator

./: CMakeLists.txt  README.md  run.sh
configs/: ur10.cfg  ur10.json  ur5.cfg  ur5.json
src/: formatting.h  joints.h  kinematics.cpp  kinematics.h  main.cpp  math.h  planner.h  properties.cpp  properties.h  publisher.h  robot.cpp  robot_sim.cpp  robot_sim.h  signals.cpp  signals.h  threads.h  throws.h  timeutils.h  trajectory.cpp  trajectory.h  transforms.h
tests/: test_kinematics.cpp  test_planner.cpp  test_publisher.cpp  test_transforms.cpp
